--- a/index.css
+++ b/index.css
@@ -1,4 +1,4 @@
-
+/* Container Style */
 .container {
     display: flex;
     width: 100%;
@@ -6,7 +6,7 @@
     flex-direction: column;
     background: linear-gradient(to bottom right, #62c7b3, #b6dbdd);
 }
-
+/* Header Info Style */
 .info {
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     text-align: center;
@@ -26,7 +26,7 @@
     font-size: .7rem;
 }
 
-
+/* Slider Style */
 .Slider {
     width: 22%;
     height: 240px;
@@ -70,7 +70,7 @@
 }
 
 @media screen and (max-width:700px) {
-
+/* Slider Responsive */
     .Slider {
         width: 40%;
         height: 153px;
