--- a/index.css
+++ b/index.css
@@ -28,7 +28,7 @@
 
 /* Slider Style */
 .Slider {
-    width: 22%;
+    width: 270px;
     height: 240px;
     overflow-x: scroll;
     /* Enable horizontal scrolling */
@@ -72,7 +72,7 @@
 @media screen and (max-width:700px) {
 /* Slider Responsive */
     .Slider {
-        width: 40%;
+        max-width: 170px;
         height: 153px;
         overflow-x: scroll;
         /* Enable horizontal scrolling */
